# read_omni_dataset

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/read_omni_dataset/: read_omni_dataset.h
launch/: .directory  all_four_robots.launch
msg/: .directory  BallData.msg  Estimate.msg  LRMGTData.msg  LRMLandmarksData.msg  RobotState.msg
src/: .directory  read_omni_dataset.cpp  read_omni_dataset.h
